package domain.core.user

sealed trait Course

case object Free extends Course
