package domain.sign_up.application

case class SignUpApplicationDateTime(value: String)
