package domain.sign_up.application.same_user

import domain.core.user_name.UserName

case class SameUser(name: UserName)
