@startuml

package core {
  package user {
    class UserId {
      - String
    }
    enum Course {
      Free
    }
  }
  package user_name {
    class UserName {
      - String first
    }
  }
  package address {
    class Address {
      - String prefecture
    }
  }
  package birth_date {
    class BirthDate {
      - LocalDate value
      + Bool isMinors(LocalDate now)
    }
  }
  package mail_address {
    class MailAddress {
      - String value
    }
  }
  package credit_card {
    class CreditCard {
      - String number
    }
    enum CreditCardVerificationResult {
      Valid,
      Invalid
    }
    interface CreditCardRepository {
      + CreditCardVerificationResult verify(CreditCard)
    }
    CreditCardRepository -right-> CreditCard
    CreditCardRepository -down-> CreditCardVerificationResult
  }
  BirthDate -[hidden]down-> MailAddress
  Address -[hidden]down-> UserName
}
package authentication {
  class UserPassword {
    - String
  }
  interface AuthenticationRepository {
    + UserId, UserPassword allocate()
    + Either[String, Unit] authenticate(UserId, UserPassword)
  }
}
AuthenticationRepository --> UserId
AuthenticationRepository --> UserPassword
package sign_up {
  package application {
    class SignUpApplication {
      - UserName
      - Address
      - BirthDate
      - MailAddress
      - CreditCard
      + SameUser sameUser()
      + BirthDateForSignUpApplicableCheck birthDate(now)
      + AppliedUser signUp(UserId, SignUpApplicationDateTime)
    }
    class SignUpApplicationDateTime {
      - LocalDateTime
    }
    enum BirthDateForSignUpApplicableCheck {
      Majors,
      Minors
      + {static} of(BirthDate, now)
    }
    package same_user {
      class SameUser {
        - UserName
      }
      enum SameUserForSignUpApplicableCheck {
        Exist,
        NotExist
      }
      interface SameUserRepository {
        + SameUserForSignUpApplicableCheck exists(SameUser)
      }
      SameUserRepository -right-> SameUser
      SameUserRepository -up-> SameUserForSignUpApplicableCheck
    }
    class SignUpApplicablePolicy {
      + {static] Either[RejectReason, Unit] check(BirthDateForSUAC, () => CreditCardVerificationResult, () => SameUserForSignUpApplicableCheck)
    }
    SignUpApplicablePolicy -up-> CreditCardVerificationResult
    SignUpApplicablePolicy -left-> BirthDateForSignUpApplicableCheck
    SignUpApplicablePolicy -down-> SameUserForSignUpApplicableCheck

    SignUpApplication --> SameUser
    SignUpApplication -up-> BirthDateForSignUpApplicableCheck
    SignUpApplication --> SignUpApplicationDateTime
  }
  package _user {
    class AppliedUser<<UserEntity>> {
      - UserId
      - UserName
      - Address
      - BirthDate
      - MailAddress
      - Course
      - SignUpApplicationDateTime
    }
    interface AppliedUserRepository {
      + apply(AppliedUser)
    }
    AppliedUserRepository -right-> AppliedUser
  }
  SignUpApplication -left-> AppliedUser
  package error {
    enum RejectReason {
      MinorsCannotApply,
      InvalidCreditCard,
      AlreadyApplied
    }
  }
  SignUpApplicablePolicy -right-> RejectReason
}

@enduml